--- a/ui/assets/styles/dark-theme.css
+++ b/ui/assets/styles/dark-theme.css
@@ -3148,11 +3148,14 @@ output {
 .navigation-tree-node-info-problems-hint .navigation-tree-node-info-problems-hint-severity {
   display: flex;
   align-items: center;
-  white-space: pre; }
+  white-space: pre;
+  line-height: 18px; }
   .navigation-tree-node-info-problems-hint .navigation-tree-node-info-problems-hint-severity .navigation-tree-node-info-problems-hint-severity-color {
-    width: 10px;
-    height: 10px;
     margin-right: 10px; }
+
+.navigation-tree-node-info-problems-hint .navigation-tree-node-info-problems-hint-severity-color {
+  width: 10px;
+  height: 10px; }
 
 .radio-list-control {
   display: inline-block;
